--- a/HomePage/Home.html
+++ b/HomePage/Home.html
@@ -25,6 +25,10 @@
         <div id="soccerball-images">
             <img src="Images/soccerBall.png"/>
         </div>
+
+        <div id="soccerball-images-two">
+            <img src="Images/soccerBall.png"/>
+        </div>
         
     </body>
 
