--- a/HomePage/Home.html
+++ b/HomePage/Home.html
@@ -8,7 +8,7 @@
 
         <div id = "title-block">
             <h1>
-                Soccer Scoreboard Generator
+                Soccer Scoreboard <br>Generator
         </h1>
 
         <div id="soccerField-img">
@@ -18,7 +18,7 @@
 
         <div id="button-setup">
             <!--<p>Create a new scoreboard</p>-->
-            <button style="vertical-align:middle"><span>Create a new scoreboard</span></button>
+           <a href="./EditingPage.html"> <button style="vertical-align:middle"><span>Create a new scoreboard</span></button></a>
         </div>
         
         
