--- a/HomePage/Home.html
+++ b/HomePage/Home.html
@@ -11,10 +11,10 @@
                 Soccer Scoreboard <br>Generator
         </h1>
 
-        <div id="soccerField-img">
+       <!-- <div id="soccerField-img">
             <img src="Images/soccerField.png"/>
 
-        </div>
+        </div> -->
 
         <div id="button-setup">
             <!--<p>Create a new scoreboard</p>-->
@@ -30,6 +30,9 @@
             <img src="Images/soccerBall.png"/>
         </div>
         
+        <div id="soccerteam">
+            <img src="Images/soccerTeam.png" height= "25%" width="25%"/>
+        </div>
     </body>
 
 
