--- a/EditingPage.html
+++ b/EditingPage.html
@@ -1,3 +1,6 @@
+<!--This HTML file is the second page, so that the user can be allowed to edit the score
+board-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
