Made more elements responsive to browser movement, styled scoreboard, and added 'back to homepage' button.

--- a/EditingPage.html
+++ b/EditingPage.html
@@ -7,10 +7,34 @@ board-->
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="StyleSheet.css">
+	<link rel="stylesheet" href="HomePage/StyleSheet.css">
 </head>
 <body>
 	<div id= "app"></div>
 	<script src="Main.js" type="module"></script>
+
+	<!--<div id = "title-block">
+		<h1>
+			Soccer Scoreboard <br>Generator
+		</h1>
+	</div> -->
+
+	<div id="soccerball-images">
+		<img src="Homepage/Images/soccerBall.png"/>
+	</div>
+
+	<div id="soccerball-images-two">
+		<img src="Homepage/Images/soccerBall.png"/>
+	</div>
+	
+	<div id="soccerteam">
+		<img src="Homepage/Images/soccerTeam.png" height= "25%" width="25%"/>
+	</div>
+
+	<div id="button-back">
+		<!--<p>Back to Home Page</p>-->
+	   <a href="HomePage/Home.html"> <button style="vertical-align:middle"><span>Back to Home Page</span></button></a>
+	</div>
+
 </body>
 </html>
