--- a/EditingPage.html
+++ b/EditingPage.html
@@ -8,6 +8,8 @@ board-->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="HomePage/StyleSheet.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
 	<div id= "app"></div>
@@ -36,5 +38,21 @@ board-->
 	   <a href="HomePage/Home.html"> <button style="vertical-align:middle"><span>Back to Home Page</span></button></a>
 	</div>
 
+	<!--Here we will get the user input for the 
+		edits and then make the edits stick -->
+	
+		<!--
+	<div id="finish-button">
+	<form>
+		<input style="vertical-align:middle" type="button" value="Finish Edit">
+	</form>
+	</div>
+-->
+
+<!--Here we will begin the code for creating the timer, the code below
+will be the main container -->
+
+	<div class="timer"></div>
+	
 </body>
 </html>
