--- a/HomePage/Home.html
+++ b/HomePage/Home.html
@@ -18,7 +18,7 @@
 
         <div id="button-setup">
             <!--<p>Create a new scoreboard</p>-->
-           <a href="../EditingPage.html"> <button style="vertical-align:middle"><span>Create a new scoreboard</span></button></a>
+           <a href="/EditingPage.html"> <button style="vertical-align:middle"><span>Create a new scoreboard</span></button></a>
         </div>
         
         
@@ -33,6 +33,8 @@
         <div id="soccerteam">
             <img src="Images/soccerTeam.png" height= "25%" width="25%"/>
         </div>
+
+        <!--Lets try to add some music (maybe)-->
     </body>
 
 
