--- a/HomePage/Home.html
+++ b/HomePage/Home.html
@@ -18,7 +18,7 @@
 
         <div id="button-setup">
             <!--<p>Create a new scoreboard</p>-->
-           <a href="/EditingPage.html"> <button style="vertical-align:middle"><span>Create a new scoreboard</span></button></a>
+           <a href="/SoccerScoreboard/EditingPage.html"> <button style="vertical-align:middle"><span>Create a new scoreboard</span></button></a>
         </div>
         
         
