--- a/HomePage/Home.html
+++ b/HomePage/Home.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-    <html>
+    <html lang="en">
         <head>
+            <meta charset="UTF-8">
+	        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	        <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel = "StyleSheet" type = "text/css" href="StyleSheet.css">
             <!--We might use the title tag here, not sure yet-->
         </head>
@@ -18,7 +21,7 @@
 
         <div id="button-setup">
             <!--<p>Create a new scoreboard</p>-->
-           <a href="/SoccerScoreboard/EditingPage.html"> <button style="vertical-align:middle"><span>Create a new scoreboard</span></button></a>
+           <a href="/EditingPage.html"> <button style="vertical-align:middle"><span>Create a new scoreboard</span></button></a>
         </div>
         
         
