--- a/HomePage/Home.html
+++ b/HomePage/Home.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-    <html>
+    <html lang="en">
         <head>
+            <meta charset="UTF-8">
+	        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	        <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel = "StyleSheet" type = "text/css" href="StyleSheet.css">
+            <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+            rel="stylesheet">
             <!--We might use the title tag here, not sure yet-->
         </head>
     <body>
@@ -18,9 +23,13 @@
 
         <div id="button-setup">
             <!--<p>Create a new scoreboard</p>-->
-           <a href="/SoccerScoreboard/EditingPage.html"> <button style="vertical-align:middle"><span>Create a new scoreboard</span></button></a>
+           <a href="/EditingPage.html"> <button style="vertical-align:middle"><span>Create a new scoreboard</span></button></a>
         </div>
         
+        <!--This will be the button to go to the in progress page-->
+        <div id="see-games">
+            <a href="/inProgress.html"><button styele="vertical-align:middle"><span>Games in progress</span></button></a>
+        </div>
         
         <div id="soccerball-images">
             <img src="Images/soccerBall.png"/>
@@ -34,6 +43,9 @@
             <img src="Images/soccerTeam.png" height= "25%" width="25%"/>
         </div>
 
+        <button type="button" class="share__btn share__btn--start">
+			<span class="material-icons">share</span>
+		</button>
         <!--Lets try to add some music (maybe)-->
     </body>
 
