--- a/HomePage/Home.html
+++ b/HomePage/Home.html
@@ -28,7 +28,7 @@
         
         <!--This will be the button to go to the in progress page-->
         <div id="see-games">
-            <a href="/inProgress.html"><button styele="vertical-align:middle"><span>Games in progress</span></button></a>
+            <a href="/inProgress.html"><button style="vertical-align:middle"><span>Games in progress</span></button></a>
         </div>
         
         <div id="soccerball-images">
