--- a/EditingPage.html
+++ b/EditingPage.html
@@ -10,10 +10,14 @@ board-->
 	<link rel="stylesheet" href="HomePage/StyleSheet.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+	<link href="urlEmailTo/elements.css" rel="stylesheet">
 </head>
 <body>
 	<div id= "app"></div>
 	<script src="Main.js" type="module"></script>
+	<script type= "text/javascript" src="urlEmailTo/sendLinkEmail.js"></script>
+	<script type= "text/javascript" src="urlEmailTo/CheckArray4Link.js"></script>
+	
 
 	<div id="soccerball-images">
 		<img src="Homepage/Images/soccerBall.png"/>
@@ -32,7 +36,8 @@ board-->
 	   <a href="HomePage/Home.html"> <button style="vertical-align:middle"><span>Back to Home Page</span></button></a>
 	</div>
 
-	<!--Here we will get the user input for the 
+	
+<!--Here we will get the user input for the 
 		edits and then make the edits stick -->
 		
 		<div id="finish-button">
@@ -49,7 +54,87 @@ board-->
 <!--Here we will begin the code for creating the timer, the code below
 will be the main container -->
 
-	<div class="timer"></div>
+<div class="timer"></div>
+
+<!--Create a link button and function-->
+<div>
+<button id="createLink" >Create a Link to Scoreboard</button>
+<div id="theModal" class="modal">
+	
+	<!--Modal showing the link-->
+	
+	<div class="modal-content">
+		
+		<span class="close">&times;</span>
+		<body>
+			<span>The link for this scoreboard is:</span>
+			<a href="javascript:document.write(generateLink());">SoccerScoreboard</a>
+		</body>
+	</div>
+
+</div>
+<script>
+	// Get the modal
+	var modal = document.getElementById("theModal");
+
+	// Get the button that opens the modal
+	var btn = document.getElementById("createLink");
+
+	// Get the <span> element that closes the modal
+	var span = document.getElementsByClassName("close")[0];
+
+	// When the user clicks the button, open the modal 
+	btn.onclick = function() {
+	modal.style.display = "block";
+	}
+
+	// When the user clicks on <span> (x), close the modal
+	span.onclick = function() {
+	modal.style.display = "none";
+	}
+
+	// When the user clicks anywhere outside of the modal, close it
+	window.onclick = function(event) {
+		if (event.target == modal) {
+			modal.style.display = "none";
+		}
+	}
+</script>
+</div>	
+
+<!--This is the button where we call the popup form to get names & email addresses/phone nums-->
+	<div>
+		<button id="popUpEmails" onclick="div_show()">Send Link to a Friend</button>
+		<script>
+			function div_show() {
+				document.getElementById('emailAddr').style.display = "block";
+			}
+		</script>
+		
+		
+	</div>
+
+	<div id="emailAddr">
+		<!-- Popup Div Starts Here -->
+		<div id="popupContact">
+		<!-- Email Adresses of Recipients-->
+			<form action="#" id="form" method="post" name="form">
+			<img id="close" src="HomePage/Images/back button_2.png" onclick ="div_hide()">
+			<h2>Email/SMS Link to a Friend</h2>
+			<hr>
+			<input id="name" name="name" placeholder="Name" type="text">
+			<input id="email" name="email" placeholder="Email" type="text">
+			<input id="sms" name="sms" placeHolder="Phone Num for SMS" type="text">
+			<textarea id="msg" name="message" placeholder="Message"></textarea>
+			<a href="javascript:%20check_empty()" id="submit">Send</a>
+			</form>
+		</div>
+		<!-- Popup Div Ends Here -->
+	</div>
+
+
+
+
 	
 </body>
 </html>
