comment out unused button

--- a/HomePage/Home.html
+++ b/HomePage/Home.html
@@ -28,7 +28,7 @@
         
         <!--This will be the button to go to the in progress page-->
         <div id="see-games">
-            <a href="/inProgress.html"><button style="vertical-align:middle"><span>Games in progress</span></button></a>
+            <a href="/inProgress.html"><button style="vertical-align:middle"><span>Join a Game</span></button></a>
         </div>
         
         <div id="soccerball-images">
@@ -42,10 +42,11 @@
         <div id="soccerteam">
             <img src="Images/soccerTeam.png" height= "25%" width="25%"/>
         </div>
-
+        <!---- Commenting this out since it's not being actively used
         <button type="button" class="share__btn share__btn--start">
 			<span class="material-icons">share</span>
 		</button>
+    -->
         <!--Lets try to add some music (maybe)-->
     </body>
 
