more styling changes. added more to the in progress page. added the scoreboard to the in progress page.

--- a/EditingPage.html
+++ b/EditingPage.html
@@ -36,6 +36,13 @@ board-->
 	   <a href="HomePage/Home.html"> <button style="vertical-align:middle"><span>Back to Home Page</span></button></a>
 	</div>
 
+	<!--Information showing that the game is in progress-->
+	<div id = "editing-progress">
+		<h1>
+			Please Edit Your Scoreboard
+		</h1>
+	</div>
+
 	
 <!--Here we will get the user input for the 
 		edits and then make the edits stick -->
