--- a/inProgress.html
+++ b/inProgress.html
@@ -14,11 +14,25 @@
         <!--Linking the timer information in here-->
         <script src="Main.js" type="module"></script>
 
-        <!--Creating the title block (may not need this , will double check)-->
-        <div id = "title-block">
+        <!--Information showing that the game is in progress-->
+        <div id = "in-progress">
             <h1>
                 Game In <br>Progress...
             </h1>
+        </div>
+        <!--Adding in the scoreboard and the images-->
+        <div id= "app"></div>
+
+        <div id="soccerball-images">
+            <img src="Homepage/Images/soccerBall.png"/>
+        </div>
+    
+        <div id="soccerball-images-two">
+            <img src="Homepage/Images/soccerBall.png"/>
+        </div>
+        
+        <div id="soccerteam">
+            <img src="Homepage/Images/soccerTeam.png" height= "25%" width="25%"/>
         </div>
 
         <!--To go back to the home page-->
