--- a/inProgress.html
+++ b/inProgress.html
@@ -17,7 +17,7 @@
 
         <!--Information showing that the game is in progress-->
         <div id = "in-progress">
-            <h1>
+            <h1 id="ending-game">
                 Game In <br>Progress...
             </h1>
         </div>
