--- a/EditingPage.html
+++ b/EditingPage.html
@@ -10,17 +10,24 @@ board-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="HomePage/StyleSheet.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-	<link href="urlEmailTo/elements.css" rel="stylesheet">
+      rel="stylesheet"> 
+	  <link href="urlEmailTo/elements.css" rel="stylesheet">
 	<title>Editing Page</title>
+	  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	  
+	  
 </head>
 <body>
 	<div id= "app"></div>
 	<script src="Main.js" type="module"></script>
-	<script type= "text/javascript" src="urlEmailTo/sendLinkEmail.js"></script>
-	<script type= "text/javascript" src="urlEmailTo/CheckArray4Link.js"></script>
+	<script type= "text/javascript" src="urlEmailTo/checkArray4Link.js"></script>
+	<!-- <script type= "text/javascript" src="urlEmailTo/sendLinkEmail.js"></script> --> 
+	<script type= "text/javascript" src="urlEmailTo/bundle.js"></script> 
 	
-
+	
+	
+	
+	
 	<div id="soccerball-images">
 		<img src="Homepage/Images/soccerBall.png"/>
 	</div>
@@ -77,7 +84,7 @@ will be the main container -->
 		<span class="close">&times;</span>
 		<body>
 			<span>The link for this scoreboard is:</span>
-			<a href="javascript:document.write(generateLink());">SoccerScoreboard</a>
+			 <a href="javascript:document.write(generateLink());">SoccerScoreboard</a> 
 		</body>
 	</div>
 
@@ -112,38 +119,46 @@ will be the main container -->
 </div>	
 
 <!--This is the button where we call the popup form to get names & email addresses/phone nums-->
-	<div>
-		<button id="popUpEmails" onclick="div_show()">Send Link to a Friend</button>
+<div>
+	<button id="popUpEmails" onclick="div_show()">Send Link to a Friend</button>
+	<script>
+		function div_show() {
+			document.getElementById('emailAddr').style.display = "block";
+		}
+	</script>
+
+
+</div>
+
+<div id="emailAddr">
+	<!-- Popup Div Starts Here -->
+	<div id="popupContact">
 		<script>
-			function div_show() {
-				document.getElementById('emailAddr').style.display = "block";
-			}
+			var linked = 'https://github.com/FSU-Devs/SoccerScoreboard';
 		</script>
 		
+	<!-- Email Adresses of Recipients-->
+		<form action="#" id="form" method="post" name="form">
+		<img id="close" src="HomePage/Images/back button_2.png" onclick ="div_hide()">
+		<h2>Email/SMS Link to a Friend</h2>
+		<hr>
+		<input id="name" name="name" placeholder="Name" type="text">
+		<input id="email" name="email" placeholder="Email" type="text">
+		<input id="sms" name="sms" placeHolder="Phone Num for SMS" type="text">
+		<input id="msg" name="message" placeholder="Message"></textarea>
 		
+		<!--<button id="sendEmails" onclick="getFormData()">send email</button> -->
+		<a href="javascript:%20check_empty()"  id="submit">Send</a>
+		</form>
 	</div>
-
-	<div id="emailAddr">
-		<!-- Popup Div Starts Here -->
-		<div id="popupContact">
-		<!-- Email Adresses of Recipients-->
-			<form action="#" id="form" method="post" name="form">
-			<img id="close" src="HomePage/Images/back button_2.png" onclick ="div_hide()">
-			<h2>Email/SMS Link to a Friend</h2>
-			<hr>
-			<input id="name" name="name" placeholder="Name" type="text">
-			<input id="email" name="email" placeholder="Email" type="text">
-			<input id="sms" name="sms" placeHolder="Phone Num for SMS" type="text">
-			<textarea id="msg" name="message" placeholder="Message"></textarea>
-			<a href="javascript:%20check_empty()" id="submit">Send</a>
-			</form>
-		</div>
-		<!-- Popup Div Ends Here -->
-	</div>
+	<!-- Popup Div Ends Here -->
+</div>
+ 
 
 
 
 
-	
+
 </body>
+
 </html>
